add text calculator

--- a/Calcutor/indax.html
+++ b/Calcutor/indax.html
@@ -12,10 +12,11 @@
 </head>
 
   <body>
-
-    <div class="container">
-
-      <div class="calculator">
+      <!-- branch compuerA we add text calculator                -->
+      <div class="container">
+        
+        <div class="calculator">
+        <h1>calculator</h1>
 
         <input type="text" placeholder="0" id="output-screen">
         <button onclick="clr()">CL</button>
